--- a/bin/show-image-ps.in
+++ b/bin/show-image-ps.in
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 # read helper functions
-source "$(dirname $0)/functions"
+source "%PREFIX%/share/image-launch/functions"
 
 # resolve path of the config file and load it
 readConfig $1
