--- a/bin/start-image.in
+++ b/bin/start-image.in
@@ -7,7 +7,7 @@ set -e
 source "%PREFIX%/share/image-launch/functions"
 
 # get the real path of the image-launch installation
-IMAGE_LAUNCH_INSTALLATION=$(readlink_f  "$(dirname $0)/..")
+BOOTSTRAP_ST="%PREFIX%/share/image-launch/bootstrap.st"
 
 # config file can be located by providing it as first argument. The
 # directory of the config will also be added as candidate to find
@@ -80,9 +80,9 @@ logmsg "IMAGE = " $IMAGE
 # finally call the vm with the right image and predefined options
 #
 # VM_BIN VM_ARGUMENTS IMAGE are configured in the image-launch.conf file
-logmsg $VM_BIN $VM_ARGUMENTS $IMAGE $IMAGE_LAUNCH_INSTALLATION/bin/bootstrap.st --imagelaunch-dir=$IMAGE_LAUNCH_DIR $IMAGE_ARGS $CMDLINE_ARGS
+logmsg $VM_BIN $VM_ARGUMENTS $IMAGE $BOOTSTRAP_ST --imagelaunch-dir=$IMAGE_LAUNCH_DIR $IMAGE_ARGS $CMDLINE_ARGS
 if [ "$RUN_USER" == "" ]; then
-   exec $VM_BIN $VM_ARGUMENTS $IMAGE $IMAGE_LAUNCH_INSTALLATION/bin/bootstrap.st --imagelaunch-dir=$IMAGE_LAUNCH_DIR $IMAGE_ARGS $CMDLINE_ARGS >> $IMAGE.log 2>&1
+   exec $VM_BIN $VM_ARGUMENTS $IMAGE $BOOTSTRAP_ST --imagelaunch-dir=$IMAGE_LAUNCH_DIR $IMAGE_ARGS $CMDLINE_ARGS >> $IMAGE.log 2>&1
 else
-   exec su $RUN_USER -c "$VM_BIN $VM_ARGUMENTS $IMAGE $IMAGE_LAUNCH_INSTALLATION/bin/bootstrap.st --imagelaunch-dir=$IMAGE_LAUNCH_DIR $IMAGE_ARGS $CMDLINE_ARGS >> $IMAGE.log 2>&1 "
+   exec su $RUN_USER -c "$VM_BIN $VM_ARGUMENTS $IMAGE $BOOTSTRAP_ST --imagelaunch-dir=$IMAGE_LAUNCH_DIR $IMAGE_ARGS $CMDLINE_ARGS >> $IMAGE.log 2>&1 "
 fi
