debian: Make the image-launch multi-arch compatible
Besides it being applicable for all and only one package
exists for all architectures one appears to need another
config item so that a i386 package can use the same all
package as the amd64 one.

https://wiki.ubuntu.com/MultiarchSpec#Dependencies_involving_Architecture:_all_packages

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Vcs-Browser: http://openbsc.osmocom.org/trac/browser
 
 Package: image-launch
 Architecture: all
+Multi-Arch: foreign
 Depends: ${misc:Depends}, bash
 Description: Launch Pharo images in a generic way
  Script to easily launch pharo images
